@@ -1,7 +1,8 @@
 0.8.8
 -----
   * Support as a dracut module
-  * New command: calibrate
+  * New kdumptool command: calibrate
+  * New kdumptool flag: NOSPLIT
   * Add disable_cpu_apicid parameter to the command line on x86 to prevent
     bringing up the BSP in the kdump kernel.
   * Use nr_cpus instead of maxcpus with recent kernels.
